shellfirm/tests/snapshots/checks__base-execute_all_history_commands.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history | bash",
        check_detection_ids: [
            "base:execute_all_history_commands",
        ],
        test_description: "match command that end with bash",
    },
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history | sh",
        check_detection_ids: [
            "base:execute_all_history_commands",
        ],
        test_description: "match command that end with sh",
    },
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history   |   sh",
        check_detection_ids: [
            "base:execute_all_history_commands",
        ],
        test_description: "match command with multiple spaces",
    },
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history | grep -v  | bash",
        check_detection_ids: [
            "base:execute_all_history_commands",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history|bash",
        check_detection_ids: [
            "base:execute_all_history_commands",
        ],
        test_description: "match command without spaces",
    },
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history | shh",
        check_detection_ids: [],
        test_description: "not end with sh",
    },
    TestSensitivePatternsResult {
        file_path: "base-execute_all_history_commands.yaml",
        test: "history | bashh",
        check_detection_ids: [],
        test_description: "not end with bash",
    },
]
