shellfirm/tests/snapshots/checks__base-shutdown_machine.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdown",
        check_detection_ids: [
            "base:shutdown_machine",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdown -r",
        check_detection_ids: [
            "base:shutdown_machine",
        ],
        test_description: "match command with flag",
    },
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdown -r now",
        check_detection_ids: [
            "base:shutdown_machine",
        ],
        test_description: "match command with flag value",
    },
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdown  -r    now",
        check_detection_ids: [
            "base:shutdown_machine",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdown    now  -r",
        check_detection_ids: [
            "base:shutdown_machine",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdown",
        check_detection_ids: [
            "base:shutdown_machine",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "base-shutdown_machine.yaml",
        test: "shutdownn",
        check_detection_ids: [],
        test_description: "not match",
    },
]
