shellfirm/tests/snapshots/checks__fs-filesystem_backup.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "dump -0f /backup.dump /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match creating filesystem dump",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "dump  -0f  /backup.dump  /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match creating filesystem dump with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "restore -rf /backup.dump /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match restoring from dump",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "dump -0u /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match updating dump",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "dump -0f /backup.dump -b 1024 /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match dump with block size",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "restore -rf -b 1024 /backup.dump /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match restore with block size",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "dump -0f /backup.dump -z 9 /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match compressed dump",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "restore -rf -z /backup.dump /dev/sda1",
        check_detection_ids: [
            "fs:filesystem_backup",
        ],
        test_description: "match compressed restore",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "dump -0f /backup.dump /tmp/test.img",
        check_detection_ids: [],
        test_description: "should not match dumping regular file",
    },
    TestSensitivePatternsResult {
        file_path: "fs-filesystem_backup.yaml",
        test: "restore -rf /backup.dump /tmp/test.img",
        check_detection_ids: [],
        test_description: "should not match restoring to regular file",
    },
]
