shellfirm/tests/snapshots/checks__fs-flush_file_content.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "fs-flush_file_content.yaml",
        test: "echo \"test\" > Cargo.toml",
        check_detection_ids: [
            "fs:flush_file_content",
        ],
        test_description: "flush content",
    },
    TestSensitivePatternsResult {
        file_path: "fs-flush_file_content.yaml",
        test: "echo \"test\" > file.txt",
        check_detection_ids: [],
        test_description: "file not found",
    },
    TestSensitivePatternsResult {
        file_path: "fs-flush_file_content.yaml",
        test: "cat file.old.txt > Cargo.toml",
        check_detection_ids: [
            "fs:flush_file_content",
        ],
        test_description: "flush content",
    },
    TestSensitivePatternsResult {
        file_path: "fs-flush_file_content.yaml",
        test: "cat file.old.txt > Cargo.toml",
        check_detection_ids: [
            "fs:flush_file_content",
        ],
        test_description: "flush content",
    },
    TestSensitivePatternsResult {
        file_path: "fs-flush_file_content.yaml",
        test: "cat  file.old.txt    >    Cargo.toml",
        check_detection_ids: [
            "fs:flush_file_content",
        ],
        test_description: "flush content with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "fs-flush_file_content.yaml",
        test: "cat \"test\" >> file.txt",
        check_detection_ids: [],
        test_description: "todo:: need to change the regex to skip this command when append data to file",
    },
]
